--- a/_posts/books/2020-10-25-2020.html
+++ b/_posts/books/2020-10-25-2020.html
@@ -25,6 +25,15 @@ tags: [2020]
     var booksData = [
         { name: "Mockingjay", author: "Suzanne Collins", year: "2010", month: 1, pages: "390", presentation: "paper" },
         { name: "Fermat's enigma", author: "Singh Simon", year: "1998", month: 2, pages: "315", presentation: "paper" },
+        { name: "Dr. Sleep", author: "Stephen King", year: "2013", month: 3, pages: "568", presentation: "paper" },
+        { name: "Does God play dice?", author: "Ian Steward", year: "2002", month: 4, pages: "416", presentation: "paper" },
+        { name: "The long walk", author: "Stephen King", year: "1999", month: 5, pages: "370", presentation: "digital" },
+        { name: "Desesperation", author: "Stephen King", year: "1996", month: 6, pages: "547", presentation: "digital" },
+        { name: "Posession", author: "Richard Bachman", year: "1996", month: 7, pages: "488", presentation: "digital" },
+        { name: "La chica del tren", author: "Paula Hawkins", year: "2015", month: 8, pages: "496", presentation: "digital" },
+        { name: "Un pequeño favor", author: "Darcy Bell", year: "2017", month: 9, pages: "304", presentation: "digital" },
+        { name: "Factotum", author: "Charles Bukowski", year: "1975", month: 10, pages: "208", presentation: "digital" },
+        { name: "And Then There Were None", author: "Agatha Christie", year: "2004", month: 10, pages: "264", presentation: "digital" },
     ];
     var gridOptions = {
         columnDefs: columnDefs,
@@ -32,7 +41,7 @@ tags: [2020]
             editable: true,
             sortable: true,
             flex: 1,
-            width: 170,
+            minWidth: 90,
             filter: true,
             resizable: true
         },
