add pictures and cv tab

--- a/_posts/books/2020-10-25-2020.html
+++ b/_posts/books/2020-10-25-2020.html
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: "Books 2020"
+title: "My Books 2020"
 author: max
 categories: [ books ]
-image: assets/images/home.jpg
+image: assets/images/old-books-436498_640.jpg
 tags: [2020]
 ---
 <script src="../../assets/js/ag-grid-community.min.js"></script>
