--- a/_posts/traveling/2020-10-25-marquelia.html
+++ b/_posts/traveling/2020-10-25-marquelia.html
@@ -3,7 +3,7 @@ layout: post
 title: "Marquelia"
 author: max
 categories: [ traveling ]
-image: assets/images/home.jpg
+image: assets/images/Marquelia/sunrise.jpg
 tags: [sticky]
 
 ---
