--- a/_posts/coding/2020-10-26-triangle-numbers.html
+++ b/_posts/coding/2020-10-26-triangle-numbers.html
@@ -4,7 +4,7 @@ title:  "Triangle Numbers"
 author: jane
 categories: [ coding ]
 image: assets/images/Code/First_six_triangular_numbers.png
-tags: [sticky]
+tags: [2020]
 ---
 
 <p>This is a test<p>
