--- a/_posts/traveling/2020-10-25-tecolutla.html
+++ b/_posts/traveling/2020-10-25-tecolutla.html
@@ -3,7 +3,20 @@ layout: post
 title: "Tecolutla"
 author: max
 categories: [ traveling ]
-image: assets/images/Marquelia/sunrise.jpg
-tags: [sticky]
+image: assets/images/Tecolutla/cover.jpg
+tags: [2020]
 
 ---
+<p>
+    On march this year we went to Tecolutla <a href="https://en.wikipedia.org/wiki/Tecolutla">link</a> here we visited Tajin which is one of the biggest and unexplored ruins from the Veracruz culture.
+</p>
+
+<ul class="photo-gallery">
+    {% for image in site.static_files %}
+  {% if image.path contains 'assets/images/Tecolutla' %}
+    <li><img src="{{ image.path }}" alt="{{ image.title}}" /></li>
+  {% endif %}
+{% endfor %}
+    {% for image in page.images %}
+    {% endfor %}
+</ul>
