--- a/_posts/traveling/2020-10-25-marquelia.html
+++ b/_posts/traveling/2020-10-25-marquelia.html
@@ -4,7 +4,7 @@ title: "Marquelia"
 author: max
 categories: [ traveling ]
 image: assets/images/Marquelia/sunrise.jpg
-tags: [sticky]
+tags: [2020]
 
 ---
 
@@ -12,8 +12,7 @@ tags: [sticky]
     turtles to the sea. This travel was so great and peaceful, so uncrowded that I had the opportunity to take a good
     picture of the night sky. Enjoy the gallery.
 <p>
-
-<ul class="photo-gallery">
+  <ul class="photo-gallery">
     {% for image in site.static_files %}
   {% if image.path contains 'assets/images/Marquelia' %}
     <li><img src="{{ image.path }}" alt="{{ image.title}}" /></li>
